config/kubernetes/harness/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-harness
  namespace: laa-criminal-applications-datastore-harness
  labels:
    app: laa-criminal-applications-datastore-web-harness
spec:
  ports:
  - port: 80
    name: http
    targetPort: 3000
  selector:
    app: laa-criminal-applications-datastore-web-harness
