config/kubernetes/harness/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-harness
  namespace: laa-criminal-applications-datastore-harness
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: ingress-harness-laa-criminal-applications-datastore-harness-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: secrets-harness
    nginx.ingress.kubernetes.io/server-snippet: |
      location = /.well-known/security.txt {
        auth_basic off;
        return 301 https://raw.githubusercontent.com/ministryofjustice/security-guidance/main/contact/vulnerability-disclosure-security.txt;
      }
spec:
  ingressClassName: default
  tls:
  - hosts:
    - criminal-applications-datastore-harness.apps.live.cloud-platform.service.justice.gov.uk
  rules:
  - host: criminal-applications-datastore-harness.apps.live.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: service-harness
            port:
              number: 80
